# geany-dbus

./: .gitignore  README  configure.ac  document.patch  geany.project  iface.tmp
python/: signaltest.py
python/geany/: __init__.py
scripts/: codegen.py
src/: Makefile  Makefile.am  app.c  app.vala  dbus-plugin.c  dbus-plugin.h  dbus-plugin.vala  document.c  document.vala  geany.vapi  iface-prefs.c  iface-prefs.vala  indent-prefs.c  indent-prefs.vala  plugin.c  plugin.vala  project.c  project.vala  server.c  server.vala  signals.vala  tmp.patch  widgets.c  widgets.vala
src/backup/: dbus-server.c  dbus-server.h  gvalue-to-gvariant.c  plugin.c.in.c
src/vala/: dbus-client-test.vala  dbus-server.vala
